--- a/hangzhou.html
+++ b/hangzhou.html
@@ -95,7 +95,7 @@
           <div>&nsp;</div>
           <div class="col-md-12 text-center">
               <div class="form-group col-md-offset-4 col-md-4 col-md-offset-4 wow fadeInDown" data-wow-delay=".7s">
-                <a class="sign-up-button btn btn-border btn-lg col-md-offset-3 col-md-6 col-md-offset-3 wow fadeInUp" data-wow-delay="1s" href="https://www.google.com/maps/d/u/0/edit?mid=1MVEXi1zIcciRZO7vUXJ9iJn3HSY&ll=30.24271988002666%2C120.26442780000002&z=12" target="_blank" onclick="ga('send', 'event', 'google', 'life', 'whiteheroncastle', '1')"><i class="fa fa-map-marker fa-stack-2x"></i><br /><br />지도 보기</a>
+                <a class="sign-up-button btn btn-border btn-lg col-md-offset-3 col-md-6 col-md-offset-3 wow fadeInUp" data-wow-delay="1s" href="https://www.google.com/maps/d/u/0/edit?mid=1MVEXi1zIcciRZO7vUXJ9iJn3HSY&ll=30.24271988002666%2C120.26442780000002&z=12" target="_blank" onclick="ga('send', 'event', 'google', 'life', 'hangzhou', '1')"><i class="fa fa-map-marker fa-stack-2x"></i><br /><br />지도 보기</a>
               </div>
           </div>
         </div>
