--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h1 class="title-small wow tada"><font color="#000">리얼 상하이</font></h1>
         <div class="col-md-12 text-center">
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="hangzhou.html"><img src="img/btn_hangzhou.png" width="350px"/></a>
-          <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_hangzhou.png" width="350px"/></a>
+          <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_suzhou.png" width="350px"/></a>
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_hangzhou.png" width="350px"/></a>
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_hangzhou.png" width="350px"/></a>
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_hangzhou.png" width="350px"/></a>
