--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="col-md-12 text-center">
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="hangzhou.html"><img src="img/btn_hangzhou.png" width="350px"/></a>
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_suzhou.png" width="350px"/></a>
-          <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_hangzhou.png" width="350px"/></a>
+          <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_waitan.png" width="350px"/></a>
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_hangzhou.png" width="350px"/></a>
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_hangzhou.png" width="350px"/></a>
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_hangzhou.png" width="350px"/></a>
