--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_suzhou.png" width="350px"/></a>
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_waitan.png" width="350px"/></a>
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_pudong.png" width="350px"/></a>
-          <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_hangzhou.png" width="350px"/></a>
+          <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_oldcity.png" width="350px"/></a>
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_hangzhou.png" width="350px"/></a>
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_hangzhou.png" width="350px"/></a>
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_hangzhou.png" width="350px"/></a>
