--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_oldcity.png" width="350px"/></a>
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_renminpark.png" width="350px"/></a>
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_xintiandi.png" width="350px"/></a>
-          <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_hangzhou.png" width="350px"/></a>
+          <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_formerfrenchconcession.png" width="350px"/></a>
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_hangzhou.png" width="350px"/></a>
         </div>
       </div>
