--- a/index.html
+++ b/index.html
@@ -38,11 +38,24 @@
 
 <body>
 
+  <!-- Nav Menu Section -->
+  <div class="logo-menu">
+    <nav class="navbar navbar-default">
+      <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header col-md-3">
+          <a class="navbar-brand" href="index.html"><img src="img/real_logo_o.png" width="80px" /> 리얼 상하이 지도</a>
+        </div>
+      </div>
+    </nav>
+  </div>
+  <!-- Nav Menu Section End -->
+
   <!-- feature Section Start -->
   <section id="features">
     <div class="container">
       <div class="row">
-        <h1 class="title-small wow tada"><font color="#000">리얼 상하이</font></h1>
+        <!-- <h1 class="title-small wow tada"><font color="#000">리얼 상하이</font></h1> -->
         <div class="col-md-12 text-center">
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="hangzhou.html"><img src="img/btn_hangzhou.png" width="350px"/></a>
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_suzhou.png" width="350px"/></a>
