--- a/index.html
+++ b/index.html
@@ -37,18 +37,21 @@
 </head>
 
 <body>
-
+  <div id="layer_fixed">
+    <a class="navar-brand" href="index.html"><img class="logo-menu" src="img/real_logo_o.png" width="80px" /> 리얼 상하이 지도</a>
+  </div>
   <!-- Nav Menu Section -->
+  <!--
   <div class="logo-menu">
     <nav class="navbar navbar-default">
       <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header col-md-3">
           <a class="navbar-brand" href="index.html"><img src="img/real_logo_o.png" width="80px" /> 리얼 상하이 지도</a>
         </div>
       </div>
     </nav>
   </div>
+-->
   <!-- Nav Menu Section End -->
 
   <!-- feature Section Start -->
