--- a/hangzhou.html
+++ b/hangzhou.html
@@ -71,16 +71,18 @@
 
 <body>
   <!-- Nav Menu Section -->
-  <div class="logo-menu">
+  <div id="layer_fixed">
+    <a class="navar-brand" href="index.html"><img class="logo-menu" src="img/real_logo_o.png" width="80px" /> 리얼 상하이 지도</a>
+  </div>
+  <!-- <div class="logo-menu">
     <nav class="navbar navbar-default">
       <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header col-md-3">
           <a class="navbar-brand" href="hangzhou.html.html"> <img src="img/real_logo.png" width="160px"/> <strong>MAP</strong></a>
         </div>
       </div>
     </nav>
-  </div>
+  </div> -->
   <!-- Nav Menu Section End -->
 
   <!-- Hero Area Section -->
