--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="row">
         <!-- <h1 class="title-small wow tada"><font color="#000">리얼 상하이</font></h1> -->
         <div class="col-md-12 text-center">
-          <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_waitan.png" width="350px"/></a>
+          <a class="wow fadeInLeft animated" data-wow-offset="10" href="waitan.html"><img src="img/btn_waitan.png" width="350px"/></a>
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_pudong.png" width="350px"/></a>
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_oldcity.png" width="350px"/></a>
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_renminpark.png" width="350px"/></a>
