--- a/waitan.html
+++ b/waitan.html
@@ -62,10 +62,9 @@
           <div class="col-md-12">
             <h1 class="title-big">와이탄 杭州</h1>
           </div>
-          <div>&nsp;</div>
           <div class="col-md-12 text-center">
-              <div class="form-group col-md-offset-4 col-md-4 col-md-offset-4 wow fadeInDown" data-wow-delay=".7s">
-                <a class="sign-up-button btn btn-border btn-lg col-md-offset-3 col-md-6 col-md-offset-3 wow fadeInUp" data-wow-delay="1s" href="https://www.google.com/maps/d/u/0/edit?mid=1BLOieKTz9wMGEQ9v8QnEsgvj78s&ll=31.247027980544807%2C121.48891090000006&z=14" target="_blank" onclick="ga('send', 'event', 'google', 'life', 'waitan', '1')"><i class="fa fa-map-marker fa-stack-2x"></i><br /><br />지도 보기</a>
+              <div class="form-group col-md-offset-4 col-md-4 col-md-offset-4">
+                <a class="sign-up-button btn btn-border btn-lg col-md-offset-3 col-md-6 col-md-offset-3" href="https://www.google.com/maps/d/u/0/edit?mid=1BLOieKTz9wMGEQ9v8QnEsgvj78s&ll=31.247027980544807%2C121.48891090000006&z=14" target="_blank" onclick="ga('send', 'event', 'google', 'life', 'waitan', '1')"><i class="fa fa-map-marker"></i> 지도 보기</a>
               </div>
           </div>
         </div>
