--- a/waitan.html
+++ b/waitan.html
@@ -76,7 +76,7 @@
   <!-- Hero Area Section End-->
 
   <section id="bottom">
-    <div class="container">
+    <div class="container" style="padding-top:0px;">
       <div class="row">
         <div class="col-md-3 col-sm-3 col-xs-12">
           <h3>Share</h3>
