--- a/waitan.html
+++ b/waitan.html
@@ -80,8 +80,8 @@
       <div class="row">
         <div class="col-md-3 col-sm-3 col-xs-12">
           <h3>Share</h3>
-          <a class="social" href="http://www.facebook.com/sharer/sharer.php?u=http://www.hanbit.co.kr/life/realguide/osaka/whiteheroncastle.html" target="_blank" onclick="ga('send', 'event', 'facebook', 'life', 'whiteheroncastle', '1')"><i class="fa fa-facebook fa-2x"></i></a>
-          <a class="social" href="https://twitter.com/intent/tweet?text=TEXT&url=http://www.hanbit.co.kr/life/realguide/osaka/whiteheroncastle.html" target="_blank" onclick="ga('send', 'event', 'twitter', 'life', 'whiteheroncastle', '1')"><i class="fa fa-twitter fa-2x"></i></a>
+          <a class="social" href="http://www.facebook.com/sharer/sharer.php?u=http://www.hanbit.co.kr/life/realguide/shanghai/waitan.html" target="_blank" onclick="ga('send', 'event', 'facebook', 'life', 'waitan', '1')"><i class="fa fa-facebook fa-2x"></i></a>
+          <a class="social" href="https://twitter.com/intent/tweet?text=TEXT&url=http://www.hanbit.co.kr/life/realguide/shanghai/waitan.html" target="_blank" onclick="ga('send', 'event', 'twitter', 'life', 'waitan', '1')"><i class="fa fa-twitter fa-2x"></i></a>
           <!-- <a class="social" href="#" target="_blank"><i class="fa fa-google-plus fa-2x"></i></a> -->
           <!-- <a class="social" href="#" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a> -->
         </div>
