--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <body>
   <div id="layer_fixed">
     <a class="navar-brand" href="index.html"><img class="logo-menu" src="img/real_logo_o.png" width="80px" /> 리얼 상하이 지도</a>
+    <img src="img/chr.png" width="70px;" style="float:right; padding-top:5px;" />
   </div>
   <!-- Nav Menu Section -->
   <!--
