--- a/thebund.html
+++ b/thebund.html
@@ -41,16 +41,8 @@
   <!-- Nav Menu Section -->
   <div id="layer_fixed">
     <a class="navar-brand" href="index.html"><img class="logo-menu" src="img/real_logo_o.png" width="80px" /> 리얼 상하이 지도</a>
+    <img src="img/chr.png" width="70px;" style="float:right; padding-top:5px;" />
   </div>
-  <!-- <div class="logo-menu">
-    <nav class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header col-md-3">
-          <a class="navbar-brand" href="hangzhou.html.html"> <img src="img/real_logo.png" width="160px"/> <strong>MAP</strong></a>
-        </div>
-      </div>
-    </nav>
-  </div> -->
   <!-- Nav Menu Section End -->
 
   <!-- Hero Area Section -->
