--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="oldcity.html"><img src="img/btn_oldcity.png" width="350px"/></a>
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="renminpark.html"><img src="img/btn_renminpark.png" width="350px"/></a>
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="xindiandi.html"><img src="img/btn_xintiandi.png" width="350px"/></a>
-          <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_formerfrenchconcession.png" width="350px"/></a>
+          <a class="wow fadeInLeft animated" data-wow-offset="10" href="formerfrenchconcession.html"><img src="img/btn_formerfrenchconcession.png" width="350px"/></a>
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_jingan.png" width="350px"/></a>
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="hangzhou.html"><img src="img/btn_hangzhou.png" width="350px"/></a>
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_suzhou.png" width="350px"/></a>
