--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="formerfrenchconcession.html"><img src="img/btn_formerfrenchconcession.png" width="350px"/></a>
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="jingan.html"><img src="img/btn_jingan.png" width="350px"/></a>
           <a class="wow fadeInLeft animated" data-wow-offset="10" href="hangzhou.html"><img src="img/btn_hangzhou.png" width="350px"/></a>
-          <a class="wow fadeInLeft animated" data-wow-offset="10" href="#"><img src="img/btn_suzhou.png" width="350px"/></a>
+          <a class="wow fadeInLeft animated" data-wow-offset="10" href="suzhou.html"><img src="img/btn_suzhou.png" width="350px"/></a>
         </div>
       </div>
     </div>
