--- a/hangzhou.html
+++ b/hangzhou.html
@@ -40,7 +40,7 @@
 <body>
   <!-- Nav Menu Section -->
   <div id="layer_fixed">
-    <a class="navar-brand" href="index.html"><img class="logo-menu" src="img/real_logo_o.png" width="80px" /> 리얼 상하이 지도</a>
+    <a class="navar-brand" href="index.html"><img class="logo-menu" src="img/real_logo_o.png" width="80px" /><font style="font-weight: 400;"> 리얼 상하이 지도</font></a>
     <img src="img/chr.png" width="70px;" style="float:right; padding-top:5px;" />
   </div>
   <!-- Nav Menu Section End -->
