--- a/target-div.html
+++ b/target-div.html
@@ -11,7 +11,7 @@
     <button class="btn" data-clipboard-action="copy" data-clipboard-target="div">Copy</button>
 
     <!-- 2. Include library -->
-    <script src="../shanghai/js/clipboard.min.js"></script>
+    <script src="/js/clipboard.min.js"></script>
 
     <!-- 3. Instantiate clipboard -->
     <script>
