--- a/target-div.html
+++ b/target-div.html
@@ -9,6 +9,9 @@
     <!-- 1. Define some markup -->
     <div>hello</div>
     <button class="btn" data-clipboard-action="copy" data-clipboard-target="div">Copy</button>
+    
+    <div>welcome</div>
+    <button class="btn" data-clipboard-action="copy" data-clipboard-target="div">Copy</button>
 
     <!-- 2. Include library -->
     <script src="js/clipboard.min.js"></script>
