--- a/target-div.html
+++ b/target-div.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <!-- 1. Define some markup -->
-    <div>hello</div>
-    <button class="btn" data-clipboard-action="copy" data-clipboard-target="div">Copy</button>
+    <div id="#t1">hello</div>
+    <button class="btn" data-clipboard-action="copy" data-clipboard-target="#t1">Copy</button>
     
-    <div>welcome</div>
-    <button class="btn" data-clipboard-action="copy" data-clipboard-target="div">Copy</button>
+    <div id="#t2">wel</div>
+    <button class="btn" data-clipboard-action="copy" data-clipboard-target="#t2">Copy</button>
 
     <!-- 2. Include library -->
     <script src="js/clipboard.min.js"></script>
