--- a/target-div.html
+++ b/target-div.html
@@ -8,10 +8,10 @@
 <body>
     <!-- 1. Define some markup -->
     <div id="#t1">hello</div>
-    <button class="btn" data-clipboard-action="copy" data-clipboard-target="#t1">Copy</button>
+    <button class="btn" data-clipboard-action="copy" data-clipboard-target="div #t1">Copy</button>
     
-    <div id="#t2">wel</div>
-    <button class="btn" data-clipboard-action="copy" data-clipboard-target="#t2">Copy</button>
+    <div id="#t2">welcome</div>
+    <button class="btn" data-clipboard-action="copy" data-clipboard-target="div #t2">Copy</button>
 
     <!-- 2. Include library -->
     <script src="js/clipboard.min.js"></script>
