--- a/target-div.html
+++ b/target-div.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <!-- 1. Define some markup -->
-    <div id="#t1">hello</div>
-    <button class="btn" data-clipboard-action="copy" data-clipboard-target="div #t1">Copy</button>
+    <div>hel</div>
+    <button class="btn" data-clipboard-action="copy" data-clipboard-text="hel">Copy</button>
     
-    <div id="#t2">welcome</div>
-    <button class="btn" data-clipboard-action="copy" data-clipboard-target="div #t2">Copy</button>
+    <div>wel</div>
+    <button class="btn" data-clipboard-action="copy" data-clipboard-text="wel">Copy</button>
 
     <!-- 2. Include library -->
     <script src="js/clipboard.min.js"></script>
