--- a/list.html
+++ b/list.html
@@ -317,7 +317,7 @@ input:focus {
 
   <ul class="list">
     <li>
-      <h3 class="name">Jonny Stromberg</h3>
+      <h3 class="name">1933 라오창팡</h3>
       <p class="born">1986</p>
     </li>
     <li>
@@ -335,7 +335,7 @@ input:focus {
   </ul>
 
 </div>
-<script src="http://listjs.com/assets/javascripts/list.min.js"></script>
+<script src="js/list.min.js"></script>
     <script src="//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js"></script>
 
 
