--- a/list.html
+++ b/list.html
@@ -3,104 +3,104 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>list-test</title>
-      <style>
-      h2 {
-  font-family:sans-serif;
-}
-.list {
-  font-family:sans-serif;
-  margin:0;
-  padding:20px 0 0;
-}
-.list > li {
-  display:block;
-  background-color: #eee;
-  padding:10px;
-  box-shadow: inset 0 1px 0 #fff;
-}
-.avatar {
-  max-width: 150px;
-}
-img {
-  max-width: 100%;
-}
-h3 {
-  font-size: 16px;
-  margin:0 0 0.3rem;
-  font-weight: normal;
-  font-weight:bold;
-}
-p {
-  margin:0;
-}
+    <style>
+    h2 {
+    font-family:sans-serif;
+    }
+    .list {
+      font-family:sans-serif;
+      margin:0;
+      padding:20px 0 0;
+    }
+    .list > li {
+      display:block;
+      background-color: #eee;
+      padding:10px;
+      box-shadow: inset 0 1px 0 #fff;
+    }
+    .avatar {
+      max-width: 150px;
+    }
+    img {
+      max-width: 100%;
+    }
+    h3 {
+      font-size: 16px;
+      margin:0 0 0.3rem;
+      font-weight: normal;
+      font-weight:bold;
+    }
+    p {
+      margin:0;
+    }
 
-input {
-  border:solid 1px #ccc;
-  border-radius: 5px;
-  padding:7px 14px;
-  margin-bottom:10px
-}
-input:focus {
-  outline:none;
-  border-color:#aaa;
-}
-.sort {
-  padding:8px 30px;
-  border-radius: 6px;
-  border:none;
-  display:inline-block;
-  color:#fff;
-  text-decoration: none;
-  background-color: #28a8e0;
-  height:30px;
-}
-.sort:hover {
-  text-decoration: none;
-  background-color:#1b8aba;
-}
-.sort:focus {
-  outline:none;
-}
-.sort:after {
-  width: 0;
-  height: 0;
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-  border-bottom: 5px solid transparent;
-  content:"";
-  position: relative;
-  top:-10px;
-  right:-5px;
-}
-.sort.asc:after {
-  width: 0;
-  height: 0;
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-  border-top: 5px solid #fff;
-  content:"";
-  position: relative;
-  top:13px;
-  right:-5px;
-}
-.sort.desc:after {
-  width: 0;
-  height: 0;
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-  border-bottom: 5px solid #fff;
-  content:"";
-  position: relative;
-  top:-10px;
-  right:-5px;
-}
+    input {
+      border:solid 1px #ccc;
+      border-radius: 5px;
+      padding:7px 14px;
+      margin-bottom:10px
+    }
+    input:focus {
+      outline:none;
+      border-color:#aaa;
+    }
+    .sort {
+      padding:8px 30px;
+      border-radius: 6px;
+      border:none;
+      display:inline-block;
+      color:#fff;
+      text-decoration: none;
+      background-color: #28a8e0;
+      height:30px;
+    }
+    .sort:hover {
+      text-decoration: none;
+      background-color:#1b8aba;
+    }
+    .sort:focus {
+      outline:none;
+    }
+    .sort:after {
+      width: 0;
+      height: 0;
+      border-left: 5px solid transparent;
+      border-right: 5px solid transparent;
+      border-bottom: 5px solid transparent;
+      content:"";
+      position: relative;
+      top:-10px;
+      right:-5px;
+    }
+    .sort.asc:after {
+      width: 0;
+      height: 0;
+      border-left: 5px solid transparent;
+      border-right: 5px solid transparent;
+      border-top: 5px solid #fff;
+      content:"";
+      position: relative;
+      top:13px;
+      right:-5px;
+    }
+    .sort.desc:after {
+      width: 0;
+      height: 0;
+      border-left: 5px solid transparent;
+      border-right: 5px solid transparent;
+      border-bottom: 5px solid #fff;
+      content:"";
+      position: relative;
+      top:-10px;
+      right:-5px;
+    }
     </style>
 
-  <script>
-  window.console = window.console || function(t) {};
-</script>
-
+    <script>
+    window.console = window.console || function(t) {};
+    </script>
 
     <script>
     (function() {
@@ -297,40 +297,52 @@ input:focus {
       }, __animationDuration, "push");
 
     }());
-  </script>
+    </script>
 
-  <script>
-  if (document.location.search.match(/type=embed/gi)) {
-    window.parent.postMessage("resize", "*");
-  }
-</script>
-
+    <script>
+    if (document.location.search.match(/type=embed/gi)) {
+      window.parent.postMessage("resize", "*");
+    }
+    </script>
+    <!-- 텍스트 복사 -->
+    <script src="js/clipboard.min.js"></script>
+    <script>
+    var clipboard = new Clipboard('.btn');
+    clipboard.on('success', function(e) {
+        console.log(e);
+    });
+    clipboard.on('error', function(e) {
+        console.log(e);
+    });
+    </script>
+    <!-- 텍스트 복사 끝 -->
 </head>
 
 <body translate="no"  onload="_l='t';">
 
   <div id="users">
   <input class="search" placeholder="Search" />
-  <button class="sort" data-sort="name">
-    Sort by name
+  <button class="sort" data-sort="kor">
+    한글명으로 정렬
   </button>
 
   <ul class="list">
     <li>
-      <h3 class="name">1933 라오창팡</h3>
-      <p class="born">1986</p>
+      <h3 class="kor">1933 라오창팡</h3>
+      <p class="chn">1933 老场坊</p>
+      <button class="btn" data-clipboard-action="copy" data-clipboard-text="1933 老场坊">한자복사</button>
     </li>
     <li>
-      <h3 class="name">Jonas Arnklint</h3>
-      <p class="born">1985</p>
+      <h3 class="kor">Jonas Arnklint</h3>
+      <p class="chn">1985</p>
     </li>
     <li>
-      <h3 class="name">Martina Elm</h3>
-      <p class="born">1986</p>
+      <h3 class="kor">Martina Elm</h3>
+      <p class="chn">1986</p>
     </li>
     <li>
-      <h3 class="name">Gustaf Lindqvist</h3>
-      <p class="born">1983</p>
+      <h3 class="kor">Gustaf Lindqvist</h3>
+      <p class="chn">1983</p>
     </li>
   </ul>
 
@@ -341,7 +353,7 @@ input:focus {
 
     <script>
     var options = {
-  valueNames: [ 'name', 'born' ]
+  valueNames: [ 'kor', 'chn' ]
 };
 
 var userList = new List('users', options);
