--- a/list.html
+++ b/list.html
@@ -333,16 +333,16 @@
       <button class="btn" data-clipboard-action="copy" data-clipboard-text="1933 老场坊">한자복사</button>
     </li>
     <li>
-      <h3 class="kor">Jonas Arnklint</h3>
-      <p class="chn">1985</p>
+      <h3 class="kor">JDF 윈펑 극장</h3>
+      <p class="chn">JDF云峰剧院</p>
     </li>
     <li>
-      <h3 class="kor">Martina Elm</h3>
-      <p class="chn">1986</p>
+      <h3 class="kor">M50</h3>
+      <p class="chn">创意园</p>
     </li>
     <li>
-      <h3 class="kor">Gustaf Lindqvist</h3>
-      <p class="chn">1983</p>
+      <h3 class="kor">관첸제</h3>
+      <p class="chn">观前街</p>
     </li>
   </ul>
 
@@ -353,15 +353,15 @@
 
     <script>
     var options = {
-  valueNames: [ 'kor', 'chn' ]
-};
+    valueNames: [ 'kor', 'chn' ]
+    };
 
-var userList = new List('users', options);
-  //# sourceURL=pen.js
-  </script>
+    var userList = new List('users', options);
+    //# sourceURL=pen.js
+    </script>
 
     <script style="display: none !important;">
-  (function() {
+    (function() {
 
     setTimeout(function() {
       // If onload hasn't been called, stop all requests after 2 seconds
