--- a/list.html
+++ b/list.html
@@ -304,18 +304,6 @@
       window.parent.postMessage("resize", "*");
     }
     </script>
-    <!-- 텍스트 복사 -->
-    <script src="js/clipboard.min.js"></script>
-    <script>
-    var clipboard = new Clipboard('.btnc');
-    clipboard.on('success', function(e) {
-        console.log(e);
-    });
-    clipboard.on('error', function(e) {
-        console.log(e);
-    });
-    </script>
-    <!-- 텍스트 복사 끝 -->
 </head>
 
 <body translate="no"  onload="_l='t';">
@@ -335,6 +323,7 @@
     <li>
       <h3 class="kor">JDF 윈펑 극장</h3>
       <p class="chn">JDF云峰剧院</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="JDF云峰剧院">한자복사</button>
     </li>
     <li>
       <h3 class="kor">M50</h3>
@@ -347,6 +336,18 @@
   </ul>
 
 </div>
+<!-- 텍스트 복사 -->
+<script src="js/clipboard.min.js"></script>
+<script>
+var clipboard = new Clipboard('.btnc');
+clipboard.on('success', function(e) {
+    console.log(e);
+});
+clipboard.on('error', function(e) {
+    console.log(e);
+});
+</script>
+<!-- 텍스트 복사 끝 -->
 <script src="js/list.min.js"></script>
     <!-- <script src="//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js"></script> -->
 
