--- a/list.html
+++ b/list.html
@@ -104,7 +104,7 @@
 <body translate="no"  onload="_l='t';">
 
   <div id="users">
-  <input class="search" placeholder="Search" />
+  <input class="search" placeholder="검색" />
   <button class="sort" data-sort="kor">
     가나다순 정렬
   </button>
@@ -185,6 +185,111 @@
       <p class="chn">多伦路文化名人街</p>
       <button class="btnc" data-clipboard-action="copy" data-clipboard-text="多伦路文化名人街">한자복사</button>
     </li>
+    <li>
+      <h3 class="kor">라오마터우 옛 항구</h3>
+      <p class="chn">老码头</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="老码头">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">런민 공원</h3>
+      <p class="chn">人民公园</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="人民公园">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">레오 갤러리</h3>
+      <p class="chn">狮语画廊</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="狮语画廊">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">록 번드 미술관</h3>
+      <p class="chn">上海外滩美术馆</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海外滩美术馆">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">루쉰 공원</h3>
+      <p class="chn">鲁迅公园</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="鲁迅公园">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">루자주이 녹지 공원</h3>
+      <p class="chn">陆家嘴中心绿地</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="陆家嘴中心绿地">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">룽징춘</h3>
+      <p class="chn">龙井村</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="龙井村">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">류위안</h3>
+      <p class="chn">留园</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="留园">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">류허 탑 공원</h3>
+      <p class="chn">六和塔公园</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="六和塔公园">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">리버몰</h3>
+      <p class="chn">世博源</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="世博源">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">링인쓰</h3>
+      <p class="chn">灵隐寺</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="灵隐寺">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">마오쩌둥 옛집</h3>
+      <p class="chn">上海毛泽东故居</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海毛泽东故居">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">매헌</h3>
+      <p class="chn">梅軒</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="梅軒">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">문묘</h3>
+      <p class="chn">上海文庙</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海文庙">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">바진 옛집</h3>
+      <p class="chn">巴金旧居</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="巴金旧居">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">베이다제 거리</h3>
+      <p class="chn">北大街</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="北大街">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">부가오리</h3>
+      <p class="chn">步高里</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="步高里">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">빈장 공원</h3>
+      <p class="chn">滨江公园</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="滨江公园">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">사오싱루</h3>
+      <p class="chn">绍兴路</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="绍兴路">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">산둥중루</h3>
+      <p class="chn">山东中路</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="山东中路">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor"></h3>
+      <p class="chn"></p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="">한자복사</button>
+    </li>
   </ul>
 
 </div>
@@ -207,7 +312,7 @@ clipboard.on('error', function(e) {
 
 <script>
 var options = {
-valueNames: [ 'kor', 'chn' ]
+valueNames: [ 'kor' ]
 };
 
 var userList = new List('users', options);
