--- a/list.html
+++ b/list.html
@@ -286,6 +286,106 @@
       <button class="btnc" data-clipboard-action="copy" data-clipboard-text="山东中路">한자복사</button>
     </li>
     <li>
+      <h3 class="kor">산탕제</h3>
+      <p class="chn">山塘街</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="山塘街">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">상아트 갤러리</h3>
+      <p class="chn">香格纳画廊</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="香格纳画廊">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">상하이 갤러리 오브 아트</h3>
+      <p class="chn">沪申画廊</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="沪申画廊">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">상하이 공예미술 박물관</h3>
+      <p class="chn">上海工艺美术博物馆</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海工艺美术博物馆">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">상하이 도시 역사 박물관</h3>
+      <p class="chn">上海城市历史陈列馆</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海城市历史陈列馆">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">상하이 디즈니랜드</h3>
+      <p class="chn">上海迪斯尼乐园</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海迪斯尼乐园">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">상하이 란인화부 박물관</h3>
+      <p class="chn">上海蓝印花布馆</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海蓝印花布馆">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">상하이 박물관</h3>
+      <p class="chn">上海博物馆</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海博物馆">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">상하이 빌리지</h3>
+      <p class="chn">奕欧来上海购物村</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="奕欧来上海购物村">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">상하이 상청 극장</h3>
+      <p class="chn">上海商城剧院</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海商城剧院">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">상하이 성황묘</h3>
+      <p class="chn">城隍庙</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="城隍庙">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">상하이 세계금융센터</h3>
+      <p class="chn">上海环球金融中心</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海环球金融中心">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">상하이 아쿠아리움</h3>
+      <p class="chn">上海海洋水族馆</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海海洋水族馆">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">상하이 옛 거리</h3>
+      <p class="chn">上海老街</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海老街">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">상하이 우편 박물관</h3>
+      <p class="chn">上海邮政博物馆</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海邮政博物馆">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">상하이 자연사 박물관</h3>
+      <p class="chn">上海自然博物馆新馆</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海自然博物馆新馆">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">상하이 타워</h3>
+      <p class="chn">上海中心大厦</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海中心大厦">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">상하이 프로파간다 포스터 아트 센터</h3>
+      <p class="chn">上海宣传画艺术中心</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海宣传画艺术中心">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">상하이 현대 미술관</h3>
+      <p class="chn">上海当代艺术馆</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海当代艺术馆">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">상하이마시청</h3>
+      <p class="chn">上海马戏城</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海马戏城">한자복사</button>
+    </li>
+    <li>
       <h3 class="kor"></h3>
       <p class="chn"></p>
       <button class="btnc" data-clipboard-action="copy" data-clipboard-text="">한자복사</button>
